examples/test/testpolicy3732.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3732
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key18: value2
      key0: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value2
          key45: value38
          key43: value13
      podSelector:
        matchLabels:
          key24: value48
          key42: value15
          key16: value46
